--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
+    <script async
+  src="https://js.stripe.com/v3/buy-button.js">
+</script>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+
+
+<stripe-buy-button
+  buy-button-id="buy_btn_1NX3VcG2fo4Obli11ehIApYo"
+  publishable-key="pk_test_51NX3ByG2fo4Obli1SL9O5LHyAJVB5MaXmEqGhzFvPFaFJhUEH8tRnCHsWwmUBts4JRqa95u5S6VOnqNcQ02IVTFv00Y7kdOXvB"
+>
+</stripe-buy-button>
 </body>
 </html
