--- a/index.html
+++ b/index.html
@@ -13,5 +13,15 @@
   publishable-key="pk_test_51NX3ByG2fo4Obli1SL9O5LHyAJVB5MaXmEqGhzFvPFaFJhUEH8tRnCHsWwmUBts4JRqa95u5S6VOnqNcQ02IVTFv00Y7kdOXvB"
 >
 </stripe-buy-button>
+<stripe-buy-button
+  buy-button-id="buy_btn_1NZDIeG2fo4Obli1nlGINEDQ"
+  publishable-key="pk_test_51NX3ByG2fo4Obli1SL9O5LHyAJVB5MaXmEqGhzFvPFaFJhUEH8tRnCHsWwmUBts4JRqa95u5S6VOnqNcQ02IVTFv00Y7kdOXvB"
+>
+</stripe-buy-button>
+<stripe-buy-button
+  buy-button-id="buy_btn_1NZDJQG2fo4Obli1bXm08Jxy"
+  publishable-key="pk_test_51NX3ByG2fo4Obli1SL9O5LHyAJVB5MaXmEqGhzFvPFaFJhUEH8tRnCHsWwmUBts4JRqa95u5S6VOnqNcQ02IVTFv00Y7kdOXvB"
+>
+</stripe-buy-button>    
 </body>
 </html
